Changes with Apache 1.3b3

  *) PORT: All ports which don't otherwise define DEF_WANTHSREGEX will
     get Spencer regex by default.  This is to avoid having to
     discover bugs in operating system libraries.  [Dean Gaudet]

  *) PORT: "Fix" PR#467 by generating warnings on systems which we have
     not been able to get working USE_*_SERIALIZED_ACCEPT settings for.
     Document this a bit more in src/PORTING.  [Dean Gaudet] PR#467

  *) Ensure that one copy of config warnings makes it to the
     error_log.  [Dean Gaudet]

  *) Invent new structure and associated methods to handle config file
     reading. Add "custom" hook to use config file cfg_getline() on
     something which is not a FILE*  [Martin Kraemer]

  *) Make single-exe Windows install. [Ben Laurie and Eric Esselink]

  *) Make CGI work under Win95. [Ben Laurie and Paul Sutton]

  *) Make index.html and friends work under Win95. [Ben Laurie]

  *) PORT: Solaris 2.4 needs Spencer regex, the system regex is broken.
	[John Line <jml4@cam.ac.uk>] PR#1321

  *) Default pathname has been changed everywhere to /usr/local/apache
     [Sameer <sameer@c2.net>]

  *) PORT: AIX now uses USE_FCNTL_SERIALIZED_ACCEPT.
	[David Bronder <David-Bronder@uiowa.edu>] PR#849

  *) PORT: i386 AIX does not have memmove.
     [David Schuler <schuld@btv.ibm.com>] PR#1267

  *) PORT: HPUX now defaults to using Spencer regex.
     [Philippe Vanhaesendonck <pvanhaes@be.oracle.com>,
     Omar Del Rio <al112263@academ01.lag.itesm.mx>] PR#482, 1246

  *) PORT: Some versions of netbsd don't automatically define
	    __NetBSD__.  Workaround by defining NETBSD.
     [Chris Craft <ccraft@cncc.cc.co.us>] PR#977

  *) PORT: Unixware 2.x requires -lgen for syslog.
     [Hans Snijder <hs@meganet.nl>] PR#1249

  *) PORT: Ultrix appears to not have syslog.
     [Lars Eilebrecht <Lars.Eilebrecht@unix-ag.org>]

  *) PORT: Basic Gemini port (treat it like unixware212).
     ["Pavel Yakovlev (Paul McHacker)" <hac@tomcat.olly.ru>]
